2001-12-09  David Edelsohn  <edelsohn@gnu.org>

	* stor-layout.c (place_union_field): Apply ADJUST_FIELD_ALIGN
	to unions.

2001-12-08  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (rs6000_unique_section): Add missing
	parentheses.

2001-12-07  Craig Rodrigues  <rodrigc@gcc.gnu.org

	PR c++/5041
	* expr.c: Merge from mainline:
	2001-09-20  DJ Delorie  <dj@redhat.com> 
	* expr.c (store_constructor): Handle zero-length arrays and
	flexible arrays correctly.

2001-12-07  David O'Brien  <obrien@FreeBSD.org>

	* elfos.h (_USING_ELFOS_H): Rename to USING_ELFOS_H, to match mainline.
	* rs6000/rs6000.c (_USING_ELFOS_H): Likewise.

2001-12-06  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/arm/arm.h (STRUCT_VALUE): Suppress definition.
	(STRUCT_VALUE_REGNUM): Restore definition.

2001-12-06  Richard Henderson  <rth@redhat.com>

	* stmt.c (parse_input_constraint): Break out from ...
	(expand_asm_operands): ... here.  Loop over the operands twice,
	the first time only calling mark_addressable.

2001-12-06  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* fixinc/inclhack.def (stdio_va_list): Handle __VA_LIST__ in Tru64
	UNIX V5.1A stdio.h.
	* fixinc/fixincl.x: Regenerate.
	Fixes PR libf2c/4826.

2001-12-05  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cppspec.c (lang_specific_driver): Set is_cpp_driver.
	* gcc.c (process_command): Ensure the cpp driver sees
	--help and --target-help, and that the help is printed
	exactly once.

2001-12-04  DJ Delorie  <dj@redhat.com>

	* fixinc/fixincl.c (initialize): Avoid problemsome macro
	parameter names (PR 3388).

2001-12-04  Loren J. Rittle  <ljrittle@acm.org>

	bootstrap/4422
	* configure.in: Setup ability to run ./stage[1234]/xgcc in
	fixinc *as if* it were a proper lang subdirectory.
	* configure: Rebuilt.

2001-12-04  Joseph S. Myers  <jsm28@cam.ac.uk>

	* doc/install.texi: Use the GFDL.  Include years from old install
	manual in copyright notice.  Include copyright and GFDL notice on