@@ -1,3 +1,7 @@
+2001-12-11  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* gcc.dg/concat.c: New test.
+
 2001-12-06  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/compile/20011205-1.c: New test.
